tests/passing/function_param.tails
func foo(x: int) -> unit:
  pass

func tests() -> unit:
  foo(123)
