tests/failing/constant_runtime_value.tails
func a(x: int) -> unit:
  const A: int = x

  pass

func tests() -> unit:
  a(123)
